# chatty

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  format.sh  networking.hpp  snoop.py  test.sh
.github/workflows/: build.yml  clang-format-check.yml  tests.yml
src/: app.cpp  app.hpp  constants.hpp  main.cpp  message.hpp  networking.hpp  uniqueid.cpp  uniqueid.hpp
src/networking/: client.cpp  client.hpp  filedescriptor.hpp  packets.cpp  packets.hpp  tcpserver.cpp  tcpserver.hpp  tcpsocket.cpp  tcpsocket.hpp  udpsocket.cpp  udpsocket.hpp
src/screens/: chat_screen.cpp  name_input.cpp  waiting_for_peer.cpp
src/testing/: tests.cpp
